# lawyer

./: .dockerignore  .gitignore  README.MD  celery.sh  docker-compose.yml  pyproject.toml  requirements.txt
deploy/nginx/: Dockerfile  host.conf
deploy/python/: Dockerfile
src/api/: permissions.py  serializers.py  services.py  urls.py  views.py
src/lawyer/: celery.py  settings.py  urls.py
src/web/: admin.py  models.py  tasks.py  urls.py  views.py
src/web/migrations/: 0001_initial.py  0002_alter_application_id_alter_solvedapplication_id.py  0002_alter_application_options_and_more.py  0002_alter_application_phone_number.py  0003_alter_application_phone_number.py  0003_application_is_check_trademark.py  0004_alter_application_description_and_more.py  0004_application_is_done.py  0005_application_trademark.py
src/web/services/: notifications.py  telegram.py
src/web/static/vue/: package-lock.json  package.json  vue.config.js
src/web/static/vue/public/: index.html
src/web/static/vue/src/: App.vue
src/web/static/vue/src/components/: Base.vue  Footer.vue  Header.vue  Main.vue
src/web/static/web/: base.css  base.js  header.css  in_dev.css  main.js  style.css
src/web/templates/web/: base.html  in_dev.html  main.html
